--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,248 @@
----
-title: Le Wagon Middleman boilerplate
----
 
-<div class="welcome text-center padded">
-  <h1>Welcome to Middleman</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p>
+<div class="banner text-center" style="background-image: linear-gradient(-225deg, rgba(255,102,102,0.4) 0%, rgba(255,204,102, 0.4) 50%), url(<%= image_path 'background.jpg' %>);">
+  <div class="banner-content">
+    <h1>WELCOME HOME</h1>
+    <h3>Rent unique places to stay from local hosts in 190+ countries.</h3>
+    <form action="#" class="form-inline">
+      <input type="text" class="form-control input-lg" placeholder="checkin">
+      <input type="text" class="form-control input-lg" placeholder="checkout">
+      <select class="form-control input-lg">
+        <option value="1">1 guest</option>
+        <option value="2">2 guests</option>
+        <option value="3">3 guests</option>
+      </select>
+      <!--   <input type="submit" value="Search" class="btn btn-danger btn-lg"> -->
+      <button type="submit" class="btn btn-danger btn-lg">Search</button>
+    </form>
+  </br>
+  <button type="button" id="login" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal">
+    Login
+  </button>
+</div>
+</div>
+<div class="container">
+  <div class="text-center padded features">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <%= image_tag "beer.png", alt:"beer" %>
+        <h2>Beer !!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur.</p>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+       <%= image_tag "dollar.png", alt:"dollar" %>
+       <h2>Dollar !!</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur.</p>
+     </div>
+     <div class="col-xs-12 col-sm-6 col-md-3">
+       <%= image_tag "globe.png", alt:"globe" %>
+       <h2>Globe !!</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur.</p>
+     </div>
+     <div class="col-xs-12 col-sm-6 col-md-3">
+      <%= image_tag "heart.png", alt:"heart" %>
+      <h2>Heart !!</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur.</p>
+    </div>
+  </div>
+</div>
+</div>
+<div class="wrapper-grey">
+  <div class="container">
+    <h2 class="text-center">Your next trip</h2>
+    <div class="row">
+      <div class="col-xs-12 col-md-4">
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(255,102,102,0.4) 0%, rgba(255,204,102, 0.4) 50%), url(<%= image_path'card-paris.jpeg' %>); background-size: cover;">
+          <div class="card-category">Paris</div>
+          <div class="card-description">
+            <h2>Anne's Home</h2>
+            <p>Charming room with patio</p>
+          </div>
+          <%= image_tag "anne.jpg", alt:"anne", class:"card-user avatar avatar"%>
+          <%= link_to "", "", class: "card-link"%>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(255,102,102,0.4) 0%, rgba(255,204,102, 0.4) 50%), url(<%= image_path'card-brussels.jpeg' %>); background-size: cover;">
+          <div class="card-category">Brussels</div>
+          <div class="card-description">
+            <h2>Romain's Home</h2>
+            <p>Great room with patio</p>
+          </div>
+          <%= image_tag "romain.jpg", alt:"romain", class:"card-user avatar avatar"%>
+          <%= link_to "", "", class: "card-link"%>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <div class="card" style="background-image: linear-gradient(-225deg, rgba(255,102,102,0.4) 0%, rgba(255,204,102, 0.4) 50%), url(<%= image_path'card-london.jpeg' %>); background-size: cover;">
+          <div class="card-category">London</div>
+          <div class="card-description">
+            <h2>Seb's Home</h2>
+            <p>Wunderful room with patio</p>
+          </div>
+          <%= image_tag "seb.jpg", alt:"seb", class:"card-user avatar avatar"%>
+          <%= link_to "", "", class: "card-link"%>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="newsletter text-center padded">
+  <h2>Get news</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+  <form action="#" class="form-inline">
+    <input type="email" class="form-control input-lg" placeholder="bob@gmail.com">
+    <button type="submit" class="btn btn-danger btn-lg">Sign in</button>
+  </form>
+</div>
+<div id="map" style="width: 100%; height: 480px;"></div>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+<script type="text/javascript">
+  var myLatlng = new google.maps.LatLng(47.7297927,-3.4367934);
+
+  var myOptions = {
+    zoom: 15,
+    center: myLatlng,
+    scrollwheel: false,
+    mapTypeId: google.maps.MapTypeId.ROADMAP,
+    styles:
+    [
+    {
+      "featureType": "landscape",
+      "stylers": [
+      {
+        "hue": "#FFBB00"
+      },
+      {
+        "saturation": 43.400000000000006
+      },
+      {
+        "lightness": 37.599999999999994
+      },
+      {
+        "gamma": 1
+      }
+      ]
+    },
+    {
+      "featureType": "road.highway",
+      "stylers": [
+      {
+        "hue": "#FFC200"
+      },
+      {
+        "saturation": -61.8
+      },
+      {
+        "lightness": 45.599999999999994
+      },
+      {
+        "gamma": 1
+      }
+      ]
+    },
+    {
+      "featureType": "road.arterial",
+      "stylers": [
+      {
+        "hue": "#FF0300"
+      },
+      {
+        "saturation": -100
+      },
+      {
+        "lightness": 51.19999999999999
+      },
+      {
+        "gamma": 1
+      }
+      ]
+    },
+    {
+      "featureType": "road.local",
+      "stylers": [
+      {
+        "hue": "#FF0300"
+      },
+      {
+        "saturation": -100
+      },
+      {
+        "lightness": 52
+      },
+      {
+        "gamma": 1
+      }
+      ]
+    },
+    {
+      "featureType": "water",
+      "stylers": [
+      {
+        "hue": "#0078FF"
+      },
+      {
+        "saturation": -13.200000000000003
+      },
+      {
+        "lightness": 2.4000000000000057
+      },
+      {
+        "gamma": 1
+      }
+      ]
+    },
+    {
+      "featureType": "poi",
+      "stylers": [
+      {
+        "hue": "#00FF6A"
+      },
+      {
+        "saturation": -1.0989010989011234
+      },
+      {
+        "lightness": 11.200000000000017
+      },
+      {
+        "gamma": 1
+      }
+      ]
+    }
+    ]
+  };
+
+  var map = new google.maps.Map(document.getElementById('map'), myOptions);
+  var marker = new google.maps.Marker(
+  {
+    position: myLatlng,
+    map: map,
+    title: "You are here!"
+  }
+  );
+</script>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="form-login">
+        <h1>Login</h1>
+        <form action="">
+          <form action="#">
+            <div class="form-group">
+              <label for="email">Your email</label>
+              <input type="email" class="form-control" id="email" placeholder="bob@gmail.com">
+            </div>
+            <div class="form-group">
+              <label for="password">Your password</label>
+              <input type="password" class="form-control" id="password" placeholder="********">
+            </div>
+            <input type="submit" value="Sign Up" class="btn btn-danger">
+          </form>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
