Add CSS for colors and fonts and over-ride Bootstrap theme

--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -16,7 +16,7 @@
     </form>
 
     <!-- Text link -->
-    <%= link_to "Le Wagon", "https://www.lewagon.com", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Wagon", "https://www.lewagon.com", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Text link -->
     <%= link_to "Team", "team.html", class: "navbar-wagon-item navbar-wagon-link" %>
