--- a/source/stylesheets/layout/_modal.scss
+++ b/source/stylesheets/layout/_modal.scss
@@ -1,17 +1,15 @@
 .form-login {
-  background-color: #F6F6F6;
+  background-color: $gray-lighter;
   padding: 50px 20px;
-  box-shadow: 1px 1px 1px #ECECEC;
+  box-shadow: 1px 1px 1px $gray-lighter;
   border-radius: 3px;
-}
-
-.form-login h1 {
-  font-size: 22px;
-  margin-bottom: 30px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.form-login .btn {
-  width: 100%;
+  h1 {
+    font-size: 22px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    text-align: center;
+  }
+  .btn {
+    width: 100%;
+  }
 }
