--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,11 +1,11 @@
 body {
   margin: 0;
-  font-family: Open-sans, sans-serif;
-  font-size: 15px;
+  font-family: $base-font;
+  font-size: $base-size;
   font-weight: lighter;
 }
 h1, h2, h3 {
-  font-family: Raleway, Helvetica, sans-serif;
+  font-family: $header-font;
 }
 h2 {
   font-size: 28px;
@@ -17,25 +17,12 @@ h2 {
   padding: 80px;
 }
 
-#spaced-btn {
-  margin-top: 50px;
-}
-
-.banner h1 {
-  font-size: 50px;
-  font-weight: bolder;
-}
-
-.features img {
-  width: 100px;
-}
-
-.features h2 {
-  margin-bottom: 8px;
-  font-size: 20px;
-}
-
-.wrapper-grey {
-  background: #F4F4F4;
-  padding: 100px 0px;
+.features {
+  img {
+    width: 100px;
+  }
+  h2 {
+    margin-bottom: 8px;
+    font-size: 20px;
+  }
 }
