--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -7,12 +7,15 @@
   color: white;
   font-size: 22px;
   position: relative;
+  h1 {
+    font-size: 50px;
+    font-weight: bolder;
+  }
 }
 
 .banner-content {
   flex: 0 0 60%;
-}
-
-.banner-content h3 {
-  padding-bottom: 20px;
+  h3 {
+    padding-bottom: 20px;
+  }
 }
