--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,6 +15,7 @@
 
   <%= stylesheet_link_tag "all" %>
   <%= javascript_include_tag  "all" %>
+  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAJs7NNKRpXOFCb4hE2Dc9X4QTiE3TSGIA&libraries=places"%>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- Leave those next 4 lines if you care about users using IE8 -->
