--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -96,7 +96,7 @@
 </div>
 <div id="map" style="width: 100%; height: 480px;"></div>
 
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJs7NNKRpXOFCb4hE2Dc9X4QTiE3TSGIA"></script>
 
 <script type="text/javascript">
   var myLatlng = new google.maps.LatLng(47.7297927,-3.4367934);
