--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-wagon">
+<div class="navbar-wagon navbar-wagon-fixed">
   <!-- Logo -->
   <% link_to "/", class: "navbar-wagon-brand" do %>
   <%= image_tag "lewagon.png" %>
@@ -19,7 +19,7 @@
     <%= link_to "Wagon", "https://www.lewagon.com", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Text link -->
-    <%= link_to "Team", "team.html", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Team", "../team.html", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Notification link-->
     <% link_to "", class: "navbar-wagon-item navbar-wagon-link" do %>
