--- a/source/show.html.erb
+++ b/source/show.html.erb
@@ -10,7 +10,7 @@
       <div class="col-xs-12 col-sm-6 col-sm-offset-1">
         <div class="header-flat-details">
           <div class="header-flat-owner  text-center">
-            <%= image_tag flat.owner_picture, class:"header-flat-owner  text-center avatar-large" %>
+          <%= image_tag flat.owner_picture, class:"header-flat-owner  text-center avatar" %>
             <p><%= flat.owner_name %></p>
           </div>
           <div class="header-flat-name">
