--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner text-center" style="background-image: linear-gradient(-225deg, rgba(255,102,102,0.4) 0%, rgba(255,204,102, 0.4) 50%), url(<%= image_path 'background.jpg' %>);">
+<div class="banner text-center" style="background-image: linear-gradient(-225deg, rgba(255,102,102,0.4) 0%, rgba(255,204,102, 0.4) 50%), url('<%= image_path 'background.jpg' %>');">
   <div class="banner-content">
     <h1>WELCOME HOME</h1>
     <h3>Rent unique places to stay from local hosts in 190+ countries.</h3>
